--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Text File Cards</title>
-  <!-- Link to External CSS -->
   <link rel="stylesheet" href="css/cards.css">
 </head>
 <body>
   <h1>Cards from Text Files</h1>
+  
+  <!-- Search Input -->
+  <input type="text" id="searchInput" placeholder="Search tags..." />
+
   <div class="card-container" id="cardContainer"></div>
 
-  <!-- Link to External JavaScript -->
   <script src="js/txt.js"></script>
 </body>
 </html>
